# CodeFun

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  main.cpp
LibraryA/: bubble.cpp  bubble.h
SortFunctions/: CMakeLists.txt  quick.cpp  sortfunctions.h
Tests/: CMakeLists.txt  bubble_test.cpp  sort_test.cpp
gtest/lib/: gtest.lib  gtest_main.lib  gtest_maind.lib
